# rsriscv-emu

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
apps/riscv-tui/: Cargo.toml
apps/riscv-tui/src/: app.rs  cli.rs  error.rs  input.rs  loader.rs  main.rs  state.rs  terminal.rs  ui.rs
apps/riscv-tui/src/app/: key.rs  machine.rs
apps/riscv-tui/src/event/: key.rs  mod.rs
apps/riscv-tui/src/state/: list_state.rs  mode.rs  snapshot.rs
apps/riscv-tui/src/ui/: key.rs  mod.rs  render.rs  state.rs  terminal.rs
apps/riscv-tui/src/ui/component/: exception.rs  instruction.rs  memory.rs  mod.rs
apps/riscv-tui/src/ui/component/mid/: csr.rs  mod.rs  register.rs
apps/riscv-tui/src/ui/popup/: bus.rs  info.rs  mod.rs  search.rs
apps/riscv-tui/src/ui/state/: list_state.rs
crates/riscv-core/: Cargo.toml
crates/riscv-core/src/: debug.rs  error.rs  exception.rs  lib.rs  prelude.rs  riscv.rs
crates/riscv-core/src/core/: access.rs  cpu.rs  csr.rs  mmu.rs  mod.rs  pc.rs  privilege.rs  register.rs
crates/riscv-core/src/core/cpu/: debug.rs  tests.rs
crates/riscv-core/src/core/csr/: addr.rs  mstatus.rs  pmpcfg.rs  satp.rs  tests.rs
crates/riscv-core/src/core/execute/: a.rs  m.rs  mod.rs  privilege.rs  rv32i.rs  zicsr.rs
crates/riscv-core/src/core/mmu/: access.rs  sv32.rs  tests.rs  tlb.rs
crates/riscv-core/src/core/mmu/tlb/: entry.rs  plru.rs  result.rs  set.rs
crates/riscv-core/src/device/: bus.rs  memory.rs  mod.rs  uart.rs
crates/riscv-core/src/device/memory/: page.rs
crates/riscv-core/src/engine/: alu.rs  branch.rs  lsu.rs  mod.rs  sys.rs
crates/riscv-core/src/isa/: decoder.rs  instruction.rs  mod.rs  opcode.rs
crates/riscv-core/src/isa/instruction/: rv32i.rs  zicsr.rs
crates/riscv-core/src/riscv/: alu.rs  instruction.rs  memory.rs  register.rs
crates/riscv-core/tests/: rv32mi_p_test.rs  rv32si_p_test.rs  rv32ua_p_test.rs  rv32uc_p_test.rs  rv32ui_p_test.rs  rv32um_p_test.rs
crates/riscv-core/tests/common/: mod.rs
crates/riscv-core/tests/data/: README.md
crates/riscv-core/tests/data/rv32mi-p/: rv32mi-p-breakpoint  rv32mi-p-csr  rv32mi-p-illegal  rv32mi-p-instret_overflow  rv32mi-p-lh-misaligned  rv32mi-p-lw-misaligned  rv32mi-p-ma_addr  rv32mi-p-ma_fetch  rv32mi-p-mcsr  rv32mi-p-pmpaddr  rv32mi-p-sbreak  rv32mi-p-scall  rv32mi-p-sh-misaligned  rv32mi-p-shamt  rv32mi-p-sw-misaligned  rv32mi-p-zicntr
crates/riscv-core/tests/data/rv32si-p/: rv32si-p-csr  rv32si-p-dirty  rv32si-p-ma_fetch  rv32si-p-sbreak  rv32si-p-scall
crates/riscv-core/tests/data/rv32ua-p/: rv32ua-p-amoadd_w  rv32ua-p-amoand_w  rv32ua-p-amomax_w  rv32ua-p-amomaxu_w  rv32ua-p-amomin_w  rv32ua-p-amominu_w  rv32ua-p-amoor_w  rv32ua-p-amoswap_w  rv32ua-p-amoxor_w  rv32ua-p-lrsc
crates/riscv-core/tests/data/rv32uc-p/: rv32uc-p-rvc
crates/riscv-core/tests/data/rv32ui-p/: rv32ui-p-add  rv32ui-p-addi  rv32ui-p-and  rv32ui-p-andi  rv32ui-p-auipc  rv32ui-p-beq  rv32ui-p-bge  rv32ui-p-bgeu  rv32ui-p-blt  rv32ui-p-bltu  rv32ui-p-bne  rv32ui-p-fence_i  rv32ui-p-jal  rv32ui-p-jalr  rv32ui-p-lb  rv32ui-p-lbu  rv32ui-p-ld_st  rv32ui-p-lh  rv32ui-p-lhu  rv32ui-p-lui  rv32ui-p-lw  rv32ui-p-ma_data  rv32ui-p-or  rv32ui-p-ori  rv32ui-p-sb  rv32ui-p-sh  rv32ui-p-simple  rv32ui-p-sll  rv32ui-p-slli  rv32ui-p-slt  rv32ui-p-slti  rv32ui-p-sltiu  rv32ui-p-sltu  rv32ui-p-sra  rv32ui-p-srai  rv32ui-p-srl  rv32ui-p-srli  rv32ui-p-st_ld  rv32ui-p-sub  rv32ui-p-sw  (+2 more)
crates/riscv-core/tests/data/rv32um-p/: rv32um-p-div  rv32um-p-divu  rv32um-p-mul  rv32um-p-mulh  rv32um-p-mulhsu  rv32um-p-mulhu  rv32um-p-rem  rv32um-p-remu
crates/riscv-decoder/: Cargo.toml
crates/riscv-decoder/src/: bits_op.rs  csr_addr.rs  decoder.rs  error.rs  instruction.rs  lib.rs  opcode.rs  prelude.rs
crates/riscv-decoder/tests/: compressed_tests.rs  rv32im_test.rs  rv32ima_test.rs  system_test.rs
crates/riscv-disasm/: Cargo.toml
crates/riscv-disasm/src/: csr_addr.rs  disasm.rs  instructions.rs  lib.rs
crates/riscv-loader/: Cargo.toml
src/: main.rs  riscv.rs  ui.rs
src/riscv/: alu.rs  instruction.rs  loader.rs  memory.rs  opcode.rs  pc.rs  register.rs
src/ui/: key.rs
src/utils/: exception.rs
(+13 files in other folders)
