[workspace]
resolver = "2"
members = [
    "crates/*",
    "apps/*",
]

[workspace.package]
version = "0.4.0"
authors = ["Eender <ender303030@gmail.com>"]
edition = "2024"

[workspace.dependencies]
riscv-core = {path = "crates/riscv-core"}
riscv-decoder = {path = "crates/riscv-decoder"}
riscv-loader = {path = "crates/riscv-loader"}
riscv-disasm = {path = "crates/riscv-disasm"}
