[package]
name = "riscv-tui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = ["full"]

m = ["riscv-core/m", "riscv-disasm/m"]
a = ["riscv-core/a", "riscv-disasm/a"]
c = ["riscv-core/c", "riscv-disasm/c"]
zicsr = ["riscv-core/zicsr", "riscv-disasm/zicsr", "zifencei"]
zifencei = ["riscv-core/zifencei", "riscv-disasm/zifencei"]

s = ["riscv-core/s", "riscv-disasm/s"]

full = ["s", "m", "a", "c", "zicsr", "zifencei"]

[dependencies]
riscv-core = {workspace = true}
riscv-loader = {workspace = true}
riscv-disasm = {workspace = true}

crossterm = "0.29.0"
ratatui = {version = "0.30.0", features = ["crossterm"]}

thiserror = "2"
anyhow = "1"

