[package]
name = "riscv-core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = []

m = ["riscv-decoder/m"]
zifencei = ["riscv-decoder/zifencei"]

[dependencies]
riscv-decoder = {workspace = true}
riscv-loader = {workspace = true}

modular-bitfield = "0.13"

thiserror = "2"
