[package]
name = "riscv-core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = []

m = ["riscv-decoder/m"]
zicsr = ["riscv-decoder/zicsr"]
zifencei = ["riscv-decoder/zifencei"]

s = ["zicsr", "riscv-decoder/s"] # Supervisor

full = ["s", "m", "zicsr", "zifencei"]

[dependencies]
riscv-decoder = {workspace = true}
riscv-loader = {workspace = true}

modular-bitfield = "0.13"

thiserror = "2"
