[package]
name = "riscv-disasm"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = []

m = ["riscv-decoder/m"]
a = ["riscv-decoder/a"]
c = ["riscv-decoder/c"]
zicsr = ["riscv-decoder/zicsr", "zifencei"]
zifencei = ["riscv-decoder/zifencei"]

s = ["zicsr", "riscv-decoder/s"] # Supervisor

full = ["s", "m", "a", "zicsr", "zifencei"]

[dependencies]
riscv-loader = {workspace = true}
riscv-decoder = {workspace = true}

thiserror = "2"
